
* EXSLT RegExp support in standard XPath (not only XSLT)

* ``lxml.pyclasslookup`` module that can access the entire tree in read-only
  mode to help determining a suitable Element class

* ``Element.values()`` to accompany the existing ``.keys()`` and ``.items()``

* ``collectAttributes()`` C-function to build a list of attribute
  keys/values/items for a libxml2 node

Bugs fixed
----------

* Replacing the children slice of an Element would cut off the tails of the
  original children

* API functions now check incoming strings for XML conformity.  Zero bytes or
  low ASCII characters are no longer accepted.

* The XML parser did not report undefined entities as error

* The text in exceptions raised by XML parsers, validators and XPath
  evaluators now reports the first error that occurred instead of the last

* XSLT parsing failed to pass resolver context on to imported documents

* passing '' as XPath namespace prefix did not raise an error

* passing '' as namespace prefix in nsmap could be passed through to libxml2

* Objectify couldn't handle prefixed XSD type names in ``xsi:type``

* More ET compatible behaviour when writing out XML declarations or not

* More robust error handling in ``iterparse()``

* Documents lost their top-level PIs and comments on serialisation

* lxml.sax failed on comments and PIs. Comments are now properly ignored and
  PIs are copied.

* Thread safety in XPath evaluators

* Raise AssertionError when passing strings containing '\0' bytes

Other changes
-------------

* major refactoring in XPath/XSLT extension function code


1.3beta (2007-02-27)
====================

Features added
--------------

* ``DTD`` validator class (like ``RelaxNG`` and ``XMLSchema``)

* HTML generator helpers by Fredrik Lundh in ``lxml.htmlbuilder``

* ``ElementMaker`` XML generator by Fredrik Lundh in ``lxml.builder.E``

* Support for pickeling ``objectify.ObjectifiedElement`` objects to XML

* ``update()`` method on Element.attrib
