@@ -52,6 +52,8 @@ Features added
 Bugs fixed
 ----------
 
+* ``ElementInclude`` didn't honour base URL of original document
+
 * Replacing the children slice of an Element would cut off the tails of the
   original children
 
